# intuistral

./: README.md  hello.py  home.py  load-convo.tcss  main.py  mistral.py  pyproject.toml
intuistral/: main.py  mistral.py
